# WQ_project

project1/: 爬虫项目180123.md
project2/: readme.md  框架项目.md
project2/code/: dataAccess.py  fastResearchData.py  indicatorGallexy.py  main.py  model.py  proj2.py
project2/process_data/: 000001.csv  000002.csv
project3/: in.txt  in1.txt  in2.txt  report.md
project3/code/: project3.cpp  project3_v2.cpp  v3.cpp
project4/: 交易开发实例.rar  行情开发实例.rar
project4/code/: Demo  MdSpi.cpp  MdSpi.h  testMdSpi.cpp
project4/code/MdSpi/: CMakeLists.txt  Demo  Makefile  MdSpi.cpp  MdSpi.h  al1803_market_data.csv  testMdSpi.cpp
project4/code/MdSpi/inc/: MdSpi.h  ThostFtdcMdApi.h
project4/code/MdSpi/src/: CMakeLists.txt  MdSpi.cpp  testMdSpi.cpp
project4/code/TraderSpi/: CMakeLists.txt  TraderSpi.cpp
project4/code/TraderSpi/inc/: CTraderSpi.h  TraderSpi.h
project4/code/TraderSpi/src/: CMakeLists.txt  CTraderSpi.cpp  CtestTraderSpi.cpp  TraderServer.cpp  TraderSpi.cpp  testTraderApi.cpp  testTraderSpi.cpp
project4/交易开发实例/testTraderApi.doc/: TraderSpi.cpp  testTraderApi.cpp
project4/行情开发实例/testMdUserApi.doc/testMdUserApi.doc/: MdSpi.cpp  testMdApi.cpp
